--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       tasks.forEach(task => {
         const div = document.createElement('div');
         div.classList.add('task');
+        if (task.done) div.classList.add('done');
 
         const label = document.createElement('label');
         label.textContent = `${task.content} (Przypisani: ${task.assignees || ''})`;
@@ -68,7 +69,16 @@
   </script>
   <style>
     body { font-family: Arial, sans-serif; margin: 30px; }
-    .task { padding: 5px 0; border-bottom: 1px solid #ddd; display: flex; justify-content: space-between; align-items: center; }
+    .task {
+      padding: 5px 0;
+      border-bottom: 1px solid #ddd;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    .task.done {
+      background-color: #ffcccc;
+    }
     form { margin-top: 20px; }
     button { margin-left: 10px; }
   </style>
